# ray-tracer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  debug.sh  imgui.ini  ray_tracer  run.sh
.cache/clangd/index/: camera.cpp.EA9EC198101E6B9F.idx  camera.h.DDC4987A92FFA169.idx  display.cpp.03388F7ECC104D59.idx  display.h.93D063F3E6744895.idx  hittable.cpp.926F9058C828E6FF.idx  hittable.h.21957DF32DAF0A77.idx  image.cpp.0F85F1A49490A92C.idx  image.h.42D85F0909017FDF.idx  interval.cpp.B549931EE440EF65.idx  interval.h.FF251AE461196310.idx  main.cpp.E7B5795BE1A925CC.idx  material.cpp.F828DF22B9799353.idx  material.h.A5277A4E38E0E6F7.idx  plane.cpp.BB1DD3A6710FA190.idx  plane.h.178AF80B098B9785.idx  ray.cpp.251057418087B7EC.idx  ray.h.E86F74A4F1E5EE74.idx  renderer.cpp.AE150B1A85DD081F.idx  renderer.h.FCE75DDC593E8E38.idx  sphere.cpp.2F0D3C8FDA90E41E.idx  sphere.h.65ECC66A94ADD29C.idx  utility.h.17F84122BD41B15D.idx  vec.cpp.8A529CBF29976EA6.idx  vec.h.B5B048734B6DB8CE.idx  world.cpp.E9CCB1BAB328F7FB.idx  world.h.DC816B6D63E85DCF.idx
images/: example
libs/GLAD/: glad.c
libs/GLAD/glad/: glad.h
src/: camera.cpp  camera.h  display.cpp  display.h  examples.h  hittable.cpp  hittable.h  image.cpp  image.h  interval.cpp  interval.h  main.cpp  material.cpp  material.h  plane.cpp  plane.h  ray.cpp  ray.h  renderer.cpp  renderer.h  sphere.cpp  sphere.h  utility.h  vec.cpp  vec.h  world.cpp  world.h
